Viewport meta tag added to HTML for correct display on mobile devices, Font color styles added

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -9,3 +9,14 @@ body {
 h1, h2, h3, strong {
 	font-weight: 700;
 }
+
+// Font colors
+body,
+.days {
+	color: $black;
+}
+
+header,
+.celebrity {
+	color: white;
+}
